<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/characterFragment">

    <fragment
        android:id="@+id/characterFragment"
        android:name="com.example.rickandmortyapi.ui.fragments.character.CharacterFragment"
        android:label="@string/rick_and_morty_characters"
        tools:layout="@layout/fragment_character" >
        <action
            android:id="@+id/action_characterFragment_to_characterDescriptionFragment"
            app:destination="@id/characterDescriptionFragment" />
        <action
            android:id="@+id/action_characterFragment_to_dlalogFragment"
            app:destination="@id/dlalogFragment" />
    </fragment>
    <fragment
        android:id="@+id/episodeFragment"
        android:name="com.example.rickandmortyapi.ui.fragments.episode.EpisodeFragment"
        android:label="@string/rick_and_morty_episodes"
        tools:layout="@layout/fragment_episode" >
        <action
            android:id="@+id/action_episodeFragment_to_episodeDescriptionFragment"
            app:destination="@id/episodeDescriptionFragment" />
    </fragment>
    <fragment
        android:id="@+id/locationFragment"
        android:name="com.example.rickandmortyapi.ui.fragments.location.LocationFragment"
        android:label="@string/rick_and_morty_locations"
        tools:layout="@layout/fragment_location" >
        <action
            android:id="@+id/action_locationFragment_to_locationDescriptionFragment"
            app:destination="@id/locationDescriptionFragment" />
    </fragment>
    <fragment
        android:id="@+id/characterDescriptionFragment"
        android:name="com.example.rickandmortyapi.ui.fragments.character.description.CharacterDescriptionFragment"
        android:label="@string/rick_and_morty_character_detail"
        tools:layout="@layout/fragment_character_description" >
        <argument
            android:name="get_id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/episodeDescriptionFragment"
        android:name="com.example.rickandmortyapi.ui.fragments.episode.description.EpisodeDescriptionFragment"
        android:label="@string/rick_and_morty_episode_detail"
        tools:layout="@layout/fragment_episode_description" >
        <argument
            android:name="get_id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/locationDescriptionFragment"
        android:name="com.example.rickandmortyapi.ui.fragments.location.description.LocationDescriptionFragment"
        android:label="@string/rick_and_morty_location_detail"
        tools:layout="@layout/fragment_location_description" >
        <argument
            android:name="get_id_location"
            app:argType="integer" />
    </fragment>
    <dialog
        android:id="@+id/dlalogFragment"
        android:name="com.example.rickandmortyapi.ui.dialogs.DialogFragment"
        android:label="fragment_dlalog"
        tools:layout="@layout/fragment_dlalog" >
        <argument
            android:name="get_Photo"
            app:argType="string" />
    </dialog>
</navigation>